--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
+    "font-awesome": "^4.7.0",
     "joi": "^17.4.2",
     "leaflet": "^1.7.1",
     "path": "^0.12.7",
